// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PlayerInformation unit test snapshot(PieceColor Black) 1`] = `
<div
  className="sc-gtssRu hAvyXn"
>
  <span
    className="sc-hKFyIo izrEJU"
  >
    0
  </span>
  <div
    className="sc-dlnjPT jUuLpY"
  >
    <span
      className="sc-bdnylx kjkACR"
      color="#000"
    />
  </div>
</div>
`;

exports[`PlayerInformation unit test snapshot(PieceColor White) 1`] = `
<div
  className="sc-gtssRu hAvyXn"
>
  <div
    className="sc-dlnjPT jUuLpY"
  >
    <span
      className="sc-bdnylx hEHfkv"
      color="#fff"
    />
  </div>
  <span
    className="sc-hKFyIo izrEJU"
  >
    0
  </span>
</div>
`;
